<resources>

    <string name="app_name">SmartComiX</string>

    <string name="smartcomix">SmartComiX</string>
    <string name="smartsonix">SmartSoniX</string>
    <string name="acquistati">Acquistati</string>
    <string name="preferiti">Preferiti</string>
    <string name="search_hint">Titolo</string>
    <string name="splash_text">da un\'idea di Fabio Celoni</string>
    <string name="generic_error">Qualcosa è andato storto!</string>
    <string name="action_search">Cerca</string>
    <string name="action_refresh">Aggiorna</string>
    <string name="up_to_date">Dati aggiornati</string>
    <string name="error_refresh">Impossibile aggiornare i dati</string>
    <string name="error_no_connection">Nessuna connessione</string>
    <string name="no_data">Nessun risultato</string>
    <string name="card_volume">Numero %s</string>
    <string name="card_sonorization">Audio: %s</string>
    <string name="card_owned">Leggi</string>
    <string name="detail_pages">Pagine</string>
    <string name="detail_year">Anno</string>
    <string name="detail_type">Tipo</string>
    <string name="detail_genre">Genere</string>
    <string name="detail_authors">Autori</string>
    <string name="detail_sonorization">Sonorizzazione e voce di %s</string>
    <string name="detail_description">Descrizione</string>
    <string name="save">Salva</string>
    <string name="saved">Salvato</string>
    <string name="msg_saved">Aggiunto ai preferiti.</string>
    <string name="msg_unsaved">Rimosso dai preferiti.</string>
    <string name="preview">Anteprima</string>
    <string name="open_preview">Apertura anteprima</string>
    <string name="error_preview">Impossibile aprire l\'anteprima.</string>
    <string name="error_preview_cover">Impossibile aprire l\'immagine.</string>
    <!--<string name="buy">Compra</string>-->
    <string name="error_buy">Impossibile comprare il fumetto. Prova più tardi.</string>
    <string name="download">Scarica</string>
    <string name="download_wait">Attendi...</string>
    <string name="error_download">Impossibile scaricare il fumetto. Prova più tardi.</string>
    <string name="download_completed">Download completato.</string>
    <string name="read">Leggi</string>
    <string name="error_read">Impossibile aprire il fumetto. Prova a scaricarlo di nuovo.</string>
    <string name="action_delete">Elimina</string>
    <string name="warning_title">Attenzione</string>
    <string name="warning_delete_local_content">Stai per eliminare la tua copia locale.\nPotrai comunque scaricarla nuovamente in futuro.\n\nProcedere?</string>
    <string name="action_restart">Ricomincia</string>
    <string name="action_goto_bookmark">Vai a Segnalibro</string>
    <string name="action_bookmark">Segnalibro</string>
    <string name="bookmark_added">Segnalibro aggiunto.</string>
    <string name="bookmark_removed">Segnalibro rimosso.</string>
    <string name="error_bookmark_not_found">Segnalibro non trovato.</string>
    <string name="error_pages_not_found">Impossibile aprire il volume.</string>
    <string name="update_your_client">Per vedere i nuovi contenuti è necessario scaricare una nuova versione dell\'app dallo store. Procedere?</string>
    <string name="not_now">Non ora</string>
    <string name="goto_store">Vai al Google Play</string>
    <string name="inactive">inattivo</string>
</resources>
