<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/download_progress"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_progressbar_height"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/progressbar_colors"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/detail_content_padding_left"
        android:paddingRight="@dimen/detail_content_padding_right"
        android:paddingTop="@dimen/detail_content_padding_top">

        <com.shockdom.typeface.FontTextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/detail_text_size_title"
            app:typeface="@string/font_default_bold"/>

        <ImageView
            android:id="@+id/smartsonix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/text_title"
            android:src="@drawable/ic_smartsonix"
            android:visibility="gone"/>

    </RelativeLayout>

    <com.shockdom.typeface.FontTextView
        android:id="@+id/text_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/detail_content_padding_left"
        android:paddingRight="@dimen/detail_content_padding_right"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/detail_text_size_normal"
        app:typeface="@string/font_default"/>

    <com.shockdom.typeface.FontTextView
        android:id="@+id/text_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/detail_content_padding_left"
        android:paddingRight="@dimen/detail_content_padding_right"
        android:paddingTop="16dp"
        app:typeface="@string/font_default"
        android:textSize="@dimen/detail_text_size_normal"
        android:textColor="@android:color/black"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="@dimen/detail_content_padding_bottom"/>

    <com.shockdom.maxsize.MaxSizeLinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/borderless_button_container_height"
        android:maxWidth="@dimen/borderless_button_container_max_width"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_save"
            style="@style/AppTheme.BorderlessButton"
            android:text="@string/save"
            android:drawableTop="@drawable/ic_unsaved"/>

        <TextView
            android:id="@+id/button_preview"
            style="@style/AppTheme.BorderlessButton"
            android:text="@string/preview"
            android:drawableTop="@drawable/ic_preview"/>

        <TextView
            android:id="@+id/button_buy"
            style="@style/AppTheme.BorderlessButton"
            android:drawableTop="@drawable/ic_buy"/>

        <TextView
            android:id="@+id/button_download"
            style="@style/AppTheme.BorderlessButton"
            android:text="@string/download"
            android:drawableTop="@drawable/ic_download"/>

        <TextView
            android:id="@+id/button_progress"
            style="@style/AppTheme.BorderlessButton"
            android:text="@string/download_wait"
            android:drawableTop="@drawable/ic_wait"
            android:clickable="false"/>

        <TextView
            android:id="@+id/button_read"
            style="@style/AppTheme.BorderlessButton"
            android:text="@string/read"
            android:drawableTop="@drawable/ic_read"/>

    </com.shockdom.maxsize.MaxSizeLinearLayout>

</LinearLayout>